--- a/src/components/HerculesVideoScreen.module.css
+++ b/src/components/HerculesVideoScreen.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 5.5rem;
-  margin-top: 4.8rem;
+  margin-top: 5rem;
 }
 
 .card {
@@ -52,7 +52,7 @@
 /* Video */
 .video {
   width: 100%;
-  height: 390px;
+  height: 410px;
   object-fit: cover;
   object-position: top;
   border-radius: var(--radius-main);;
